2009-09-18  Christian Egli  <christian.egli@sbszh.ch>

	* tests/Makefile.am: Define the test scripts with check_SCRIPTS
	and make sure they are distributed.


2009-08-24  Christian Egli  <christian.egli@sbszh.ch>

	* tests/Makefile.am: Re-enable the present_progressive test but
	mark it as "expected failure" so that the test suite still passes.

	* tests/present_progressive.c: Add a description as to what this
	test is trying to check. Thanks Jamie for the explanation.

2009-08-21  Christian Egli  <christian.egli@sbszh.ch>

	* tests/Makefile.am: Comment out the present_progressive test
	completely so autogen.sh no longer complains.

2009-08-19  Mike Sivill <mike.sivill@viewplus.com>

	* tables/da.ctb:
	* tables/da-dk-g1.utb: Bug fixes for the Danish tables

2009-08-19  Christian Egli  <christian.egli@sbszh.ch>

	* tests/Makefile.am (check_PROGRAMS): disable the
	present_progressive test.

	* tables/Makefile.list, tables/Makefile.skel: removed as
	functionality is now provided by maketablelist.sh

	* tables/maketablelist.sh: renamed from tables/maketablelist

2009-08-12  Christian Egli  <christian.egli@sbszh.ch>

	* tests/check_all_tables (TABLES): No longer check include tables
	that are not valid on their own.

2009-08-11 John J. Boyer <john.boyer@abilitiessoft.com>

	* Updated edit tables for UK maths and Marburg to give more
	readable output.

2009-08-03 John J. Boyer <john.boyer@abilitiessoft.com>

	* Added new tables for Marburg maths.


2009-07-29 John J. Boyer <john.boyer@abilitiessoft.com>

	* Added replaceGrouping function


2009-07-28  Christian Egli  <christian.egli@sbszh.ch>

	* tables/Makefile.am: Remove some spurious files from the list of
	tables.

2009-07-28 John J. Boyer <john.boyer@abilitiessoft.com>
	* Alpha release of UK Maths tables

2009-07-17  Lars Bjørndal <lars@handytech.no>

	* contrib/liblouis.spec: Added rpm spec file.

2009-07-13 John J. Boyer <john.boyer@abilitiessoft.com>

	* Merged compileTranslationTable.c and lou_translateString.c