@@ -1,0 +1,4 @@
+EXTRA_DIST = \
+	README \
+	test_en-us-g2.ctb
+
