@@ -1,0 +1,11 @@
+# Copyright (C) 2009 ViewPlus Technologies, Inc. www.viewplus.com 
+# and JJB Software, Inc. www.jjb-software.com
+#
+# Copying and distribution of this file, with or without modification,
+# are permitted in any medium without royalty provided the copyright
+# notice and this notice are preserved.
+
+# Input                     Expected Output
+
+hello			    hello
+world			    _w
