@@ -1,3 +1,12 @@
+2009-10-16  Christian Egli  <christian.egli@sbszh.ch>
+
+	* tests/table_test_corpuses/README:
+	* tests/table_test_corpuses/Makefile.am:
+	* tests/table_test_corpuses/test_de-de-g0.utb:
+	* tests/table_test_corpuses/test_en-us-g2.ctb:
+	* tests/check_tables_against_corpus.pl:
+	* tests/Makefile.am: Added a framework for corpus based table tests.
+
 2009-09-18  Christian Egli  <christian.egli@sbszh.ch>
 
 	* tests/Makefile.am: Define the test scripts with check_SCRIPTS
